[gd_scene load_steps=2 format=3 uid="uid://uqwiw4rfabgs"]

[ext_resource type="Script" uid="uid://bodi2jykgs63k" path="res://day_one.gd" id="1_5p55f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p55f")

[node name="TaskOneView" type="Control" parent="."]
anchors_preset = 0
offset_right = 553.0
offset_bottom = 618.0

[node name="leftText" type="Label" parent="TaskOneView"]
layout_mode = 0
offset_left = 36.0
offset_top = 71.0
offset_right = 76.0
offset_bottom = 94.0
text = "Left Item: "

[node name="item" type="Label" parent="TaskOneView/leftText"]
layout_mode = 0
offset_left = 79.0
offset_right = 151.0
offset_bottom = 23.0
text = "test"

[node name="sumText" type="Label" parent="TaskOneView"]
layout_mode = 0
offset_left = 138.0
offset_top = 138.0
offset_right = 185.0
offset_bottom = 161.0
text = "Sums:"

[node name="item" type="Label" parent="TaskOneView/sumText"]
layout_mode = 0
offset_left = 79.0
offset_right = 151.0
offset_bottom = 23.0
text = "test"

[node name="rightText" type="Label" parent="TaskOneView"]
layout_mode = 0
offset_left = 248.0
offset_top = 71.0
offset_right = 288.0
offset_bottom = 94.0
text = "Right Item:"

[node name="item" type="Label" parent="TaskOneView/rightText"]
offset_left = 90.0
offset_right = 162.0
offset_bottom = 23.0
text = "test"

[node name="Task1Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -30.0
offset_right = -271.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Task 1"

[node name="Task2Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 62.0
offset_top = -30.0
offset_right = 119.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Task 2"

[connection signal="button_up" from="Task1Button" to="." method="taskOne"]
[connection signal="button_up" from="Task2Button" to="." method="taskTwo"]
